--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.1",
     "bfj": "6.1.1",
+    "body-parser": "^1.19.0",
     "browserify-fs": "^1.0.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "1.0.0",
@@ -135,5 +136,6 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
